fix: added like function to parse in more detail

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,14 +2,14 @@ FROM mcr.microsoft.com/devcontainers/javascript-node:0-18
 
 # Install system dependencies and pip as root
 USER root
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-      python3-pip tesseract-ocr libtesseract-dev \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3-pip \
+    tesseract-ocr \
+    libtesseract-dev \
+    libgl1 \
  && rm -rf /var/lib/apt/lists/*
 
-# Switch to the 'node' user before installing Python packages
+# Switch to node user for devcontainer consistency
 USER node
-RUN pip3 install --user --no-cache-dir \
-      pytesseract pillow opencv-python
 
 WORKDIR /workspace
